# CoolDwarf

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: CoolDwarf.EOS.html  CoolDwarf.EOS.invert.html  CoolDwarf.err.html  CoolDwarf.ext.html  CoolDwarf.html  CoolDwarf.model.dsep.html  CoolDwarf.model.html  CoolDwarf.model.mesa.html  CoolDwarf.opac.aesopus.html  CoolDwarf.opac.ferg05.html  CoolDwarf.opac.html  CoolDwarf.opac.opal.html  CoolDwarf.opac.set.html  CoolDwarf.rad.LTE.html  CoolDwarf.rad.NLTE.html  CoolDwarf.star.atmo.html  CoolDwarf.star.html  CoolDwarf.utils.abun.html  CoolDwarf.utils.abun.include.html  CoolDwarf.utils.const.html  CoolDwarf.utils.format.html  CoolDwarf.utils.html  CoolDwarf.utils.interp.html  CoolDwarf.utils.math.html  CoolDwarf.utils.misc.html  CoolDwarf.utils.plot.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: CoolDwarf.model.rst.txt  CoolDwarf.opac.ferg05.include.rst.txt  CoolDwarf.opac.ferg05.rst.txt  CoolDwarf.opac.kramer.rst.txt  CoolDwarf.opac.rst.txt  CoolDwarf.rad.rst.txt  CoolDwarf.star.atmo.rst.txt  CoolDwarf.utils.const.rst.txt  CoolDwarf.utils.format.rst.txt  CoolDwarf.utils.math.rst.txt  (+5 more)
docs_src/: CoolDwarf.ext.rst  CoolDwarf.model.mesa.rst  CoolDwarf.opac.aesopus.rst  CoolDwarf.opac.opal.include.rst  CoolDwarf.opac.opal.rst  CoolDwarf.opac.set.rst  CoolDwarf.rad.LTE.rst  CoolDwarf.rad.NLTE.rst  CoolDwarf.typing.rst  CoolDwarf.utils.abun.rst  Makefile  conf.py  index.rst  modules.rst
tests/: README.md
(+161 files in other folders)
